servico portal e admin concluido

--- a/resources/assets/css/portal/estilo.css
+++ b/resources/assets/css/portal/estilo.css
@@ -61,7 +61,7 @@ footer{
 }
 
 .div_colorida{
-    background: url("../img/bgMooning.png");
+    background: url("/img/bgMooning.png");
 }
 
 .servicos_item *{
