quem somos admin e portal concluido

--- a/resources/assets/css/portal/estilo.css
+++ b/resources/assets/css/portal/estilo.css
@@ -41,6 +41,10 @@ section#quemsomos{
     min-height: 60vh;
 }
 
+section#quemsomosdetalhes{
+    min-height: 30vh;
+}
+
 section#nossa-equipe{
     min-height: 60vh;
 }
