--- a/resources/assets/css/portal/estilo.css
+++ b/resources/assets/css/portal/estilo.css
@@ -184,3 +184,14 @@ footer{
     margin-bottom: 0px;
 }
 
+.tituloPost{
+    font-weight: bold;
+    color: #4b646f;
+}
+
+.usuarioPost img{
+
+    width: 65px;
+    height: 65px;
+
+}
